Add cloud storage for the project